--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.12.2",
+    "axios": "^0.21.4",
     "core-js": "^3.8.3",
+    "firebase": "^9.0.1",
     "register-service-worker": "^1.7.2",
     "vue": "^3.0.4",
     "vue-router": "^4.0.3",
@@ -27,9 +30,12 @@
     "@vue/cli-service": "~5.0.0-beta.3",
     "@vue/compiler-sfc": "^3.0.4",
     "@vue/test-utils": "^2.0.0-0",
+    "autoprefixer": "^10.3.4",
     "eslint": "^7.20.0",
     "eslint-plugin-vue": "^7.2.0",
     "jest": "^26.6.3",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.14",
     "vue-jest": "^5.0.0-0"
   },
   "eslintConfig": {
