--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.12.2",
+    "@vueuse/head": "^0.6.0",
+    "adi-userinitials": "^2.0.1",
     "axios": "^0.21.4",
     "core-js": "^3.8.3",
     "firebase": "^9.0.1",
